@@ -24,7 +24,7 @@ VariationalProblem::VariationalProblem(const Form& a,
                                        const Form& L,
                                        bool nonlinear)
   : a(a), L(L), cell_domains(0), exterior_facet_domains(0), 
-    interior_facet_domains(0), nonlinear(nonlinear), newton_solver(0)
+    interior_facet_domains(0), nonlinear(nonlinear), _newton_solver(0)
     
 {
   // FIXME: Must be set in DefaultParameters.h because of bug in cross-platform parameter system 
@@ -37,7 +37,7 @@ VariationalProblem::VariationalProblem(const Form& a,
                                        const BoundaryCondition& bc,
                                        bool nonlinear)
   : a(a), L(L), cell_domains(0), exterior_facet_domains(0),
-    interior_facet_domains(0), nonlinear(nonlinear), newton_solver(0)   
+    interior_facet_domains(0), nonlinear(nonlinear), _newton_solver(0)   
 {
   // Store boundary condition
   bcs.push_back(&bc);
@@ -52,7 +52,7 @@ VariationalProblem::VariationalProblem(const Form& a,
                                        std::vector<BoundaryCondition*>& bcs,
                                        bool nonlinear)
   : a(a), L(L), cell_domains(0), exterior_facet_domains(0), 
-    interior_facet_domains(0), nonlinear(nonlinear), newton_solver(0) 
+    interior_facet_domains(0), nonlinear(nonlinear), _newton_solver(0) 
 {
   // Store boundary conditions
   for (uint i = 0; i < bcs.size(); i++)
@@ -73,7 +73,7 @@ VariationalProblem::VariationalProblem(const Form& a,
   : a(a), L(L), cell_domains(cell_domains), 
     exterior_facet_domains(exterior_facet_domains), 
     interior_facet_domains(interior_facet_domains), nonlinear(nonlinear), 
-    newton_solver(0)
+    _newton_solver(0)
 {
   // Store boundary conditions
   for (uint i = 0; i < bcs.size(); i++)
@@ -86,7 +86,7 @@ VariationalProblem::VariationalProblem(const Form& a,
 //-----------------------------------------------------------------------------
 VariationalProblem::~VariationalProblem()
 {
-  delete newton_solver;
+  delete _newton_solver;
 }
 //-----------------------------------------------------------------------------
 void VariationalProblem::solve(Function& u)
@@ -152,6 +152,19 @@ void VariationalProblem::J(GenericMatrix& A, const GenericVector& x)
 void VariationalProblem::update(const GenericVector& x)
 {
   // Do nothing
+}
+//-----------------------------------------------------------------------------
+NewtonSolver& VariationalProblem::newton_solver()
+{
+  // Create Newton solver if missing
+  if (!_newton_solver)
+  {
+    _newton_solver = new NewtonSolver();
+    _newton_solver->set("parent", *this);
+  }
+
+  dolfin_assert(_newton_solver);
+  return *_newton_solver;
 }
 //-----------------------------------------------------------------------------
 void VariationalProblem::solve_linear(Function& u)
@@ -239,13 +252,8 @@ void VariationalProblem::solve_nonlinear(Function& u)
     u._function_space = a._function_spaces[1];
   }
 
-  // Create Newton solver if missing
-  if (!newton_solver)
-    newton_solver = new NewtonSolver();
-
   // Call Newton solver
-  dolfin_assert(newton_solver);
-  newton_solver->solve(*this, u.vector());
+  newton_solver().solve(*this, u.vector());
 
   end();
 }
